# generals-bot-cpp

./: .gitignore  CMakeLists.txt  Makefile
include/: Bot.h
src/: Bot.cpp  main.cpp
